<resources>
    <string name="app_name">ChromeOR</string>
    <string name="action_settings">Settings</string>

    <!--Navigation-->
    <string name="close">Close</string>
    <string name="about">About</string>
    <string name="search">Search</string>

    <!--About Activity-->
    <string name="about_text">A small program to view passwords from Google Chrome\n\n© Kulikov Konstantin\nsemper-viventem.ru\nkostyaxxx8@gmail.com\n\n2016</string>

    <!--Dialog login-->
    <string name="login">Loading…</string>
    <string name="get_database">Get database…</string>
    <string name="oh_no">Oh no!</string>
    <string name="have_root">Are you sure that you have root?</string>
    <string name="is_loaded">The database is loaded!</string>
    <string name="error">error!</string>
    <string name="unknow_error">There was some kind of mistake. Make sure that you have installed Google Chrome, you have Root. Perhaps setting busyBox change the situation.</string>


    <!--Dialog information-->
    <string name="user_name" translatable="false">User_name:</string>
    <string name="acction_url" translatable="false">Acction_url:</string>
    <string name="origin_url" translatable="false">Origin_url:</string>
    <string name="password" translatable="false">Password:</string>

    <!--Holder-->
    <string name="holder_login_action" translatable="false"     >action_url : %s</string>
    <string name="holder_login_list_origin" translatable="false">origin_url : %s</string>
    <string name="holder_login_username" translatable="false"   >username   : %s</string>
    <string name="holder_login_password" translatable="false"   >password   : %s</string>

    <!--Tracker-->
    <string name="tracker_onError" translatable="false">orror of getting password list =(</string>
    <string name="tracker_onError_title" translatable="false">onError</string>
    <string name="tracker_onComplite_title" translatable="false">onCompleted</string>
    <string name="tracker_onComplite" translatable="false">getting password list</string>
    <string name="tracker_activity_title" translatable="false">MainActivity</string>
    <string name="tracker_not_root" translatable="false">not root</string>
    <string name="tracker_about_activity_title" translatable="false">About</string>

    <!-- Share -->
    <string name="share_text" translatable="false">action_url: %1$s\n origin_url: %2$s\n username:%3$s\n password: %4$s</string>
</resources>
